--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
         "modernizr": "3.2.0",
         "ng-file-upload": "10.0.2",
         "ngInfiniteScroll": "1.2.1",
-        "swagger-ui": "2.1.3"
+        "swagger-ui": "2.1.3",
+        "underscore": "1.8.3"
     },
     "devDependencies": {
         "angular-mocks": "1.4.8",
