--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sun Feb 14 19:57:51 CET 2016
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/environmentreservation|EnvironmentReservation
 webAllowOthers=true
 webPort=8082
