--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "ng-file-upload": "10.0.2",
     "ngInfiniteScroll": "1.2.1",
     "swagger-ui": "2.1.3",
-    "underscore": "1.8.3",
+    "underscore": "^1.8.3",
     "angular-ui-calendar": "^1.0.1"
   },
   "devDependencies": {
