--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-sanitize": "1.4.8",
     "angular-ui-router": "0.2.15",
     "bootstrap": "3.3.5",
+    "angular-bootstrap-toggle": ">=0.1.2",
     "jquery": "2.1.4",
     "json3": "3.3.2",
     "modernizr": "3.2.0",
@@ -22,7 +23,10 @@
     "ngInfiniteScroll": "1.2.1",
     "swagger-ui": "2.1.3",
     "underscore": "^1.8.3",
-    "angular-ui-calendar": "^1.0.1"
+    "interact": ">=1.2.6",
+    "angular-ui-calendar": "^1.0.1",
+    "angular-bootstrap-calendar": ">=0.24.0",
+    "angular-animate": "1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "1.4.8",
